Bugfix for Employee class. Style and element changes to login screen, shift painter, and schedule composer index view.

--- a/ScheduleManager/wwwroot/css/site.css
+++ b/ScheduleManager/wwwroot/css/site.css
@@ -132,7 +132,7 @@ div.details {
     text-decoration: none;
     font-weight: bold;
     box-shadow: 3px 3px 3px #888888;
-    margin: 5px;
+    margin: 20px;
     float: none;
 }
 
